# Othellotron

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: human.rs  main.rs
src/bot/: evaluation.rs  mod.rs  search.rs
src/bot/moves/: generation.rs  mod.rs  ordering.rs
src/game/: board.rs  mod.rs  play.rs  validation.rs
